POFCC-154 - Add integration test